Completado desarrollo de author

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -9,4 +9,8 @@ body                 { font: 16px Georgia, serif; }
 section > div        { padding: 20px; }
 header, nav, section { background: #eee; text-align: center;}
 footer               { background: #eee; text-align: center;}
-nav span             { margin: 0px 10px 0px 0px;
+nav span             { margin: 0px 10px 0px 0px;}
+
+/*Para que no se coma la foto*/
+section		 		 {min-height: 300px;}
+div#autor img 		 {display: block; float: left;}
