--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -23,6 +23,7 @@
   		<nav class="main" id="n1" role="navigation">
   			<span><a href="/">Inicio</a></span>
   			<span><a href="/quizes/question">Preguntas</a></span>
+  			<span><a href="/author">Autor</a></span>
   		</nav>
 
   		<section class="main" id="s1">
@@ -30,8 +31,12 @@
   		</section>
 
 		<footer class="main" id="f1">
+
 		    <a href="http://es.wikipedia.org/wiki/Quiz">
 		      ¿Que es un Quiz?</a>
+		      |
+		    <a href="https://github.com/edunaveira/Quiz">GitHub</a>  
+
 		</footer>
 
   	</div>
