--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -1,3 +1,9 @@
+<div id="buscador">
+	<form method="get" action="/quizes">
+		<input type="text" name="search" placeholder="Buscador de Preguntas">
+		<input type="submit" value="Buscar">
+	</form>
+</div>
 <table>
 <% for(var i=0; i < quizes.length; i++){ %>
 	<tr>
