--- a/views/quizes/form.ejs
+++ b/views/quizes/form.ejs
@@ -2,5 +2,13 @@
 <input type="text" id="preg" name="quiz[pregunta]" value="<%= ( quiz.pregunta==="Pregunta" ? "" :  quiz.pregunta ) %>" placeholder="Pregunta"/> <p>
 <label for="resp" class="rem">Respuesta:</label>
 <input type="text" id="resp" name="quiz[respuesta]" value="<%= ( quiz.respuesta==="Respuesta" ? "" : quiz.respuesta) %>" placeholder="Respuesta"/> <p>
+<label for="tema" class="rem">Tipo: </label>
+<select name="quiz[tema]" id="tema">
+  <option value="otro" <%= (quiz.tema == 'otro' ? 'selected' : '') %> >Otro</option>
+  <option value="humanidades" <%= (quiz.tema == 'humanidades' ? 'selected' : '') %> >Humanidades</option>
+  <option value="ocio" <%= (quiz.tema == 'ocio' ? 'selected' : '') %> >Ocio</option>
+  <option value="ciencia" <%= (quiz.tema == 'ciencia' ? 'selected' : '') %> >Ciencia</option>
+  <option value="tecnologia" <%= (quiz.tema == 'tecnologia' ? 'selected' : '') %> >Tecnología</option>
+</select><p>
 <a href="/quizes"><button type="button">Cancelar</button></a>
 <input type="submit" value="Guardar">
