--- a/public/stylesheets/smartphone.css
+++ b/public/stylesheets/smartphone.css
@@ -1,7 +1,8 @@
-body             { background: #333; }
+body             { background: white; }
 
 #page-wrap:after { content: "Smartphone Layout"; }
 
 h2 span, section h3 { display: none; }
 body             	{ font-size: xx-large; }
-footer, input    	{ font-size: large; }
+footer, input, button, select    	{ font-size: large; }
+table 				 { width: 240px;}
