--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Rye);
+@import url(//fonts.googleapis.com/css?family=Rye);
 
 *                    { margin: 0; padding: 0; font-family: 'Rye', cursive;}
 body                 { font: 16px Georgia, serif; }
