--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -4,21 +4,29 @@
 		<input type="submit" value="Buscar">
 	</form>
 </div>
-<table>
+<table id="preguntas">
+	<tr>
+		<td colspan="3">Preguntas</td>
+		<td>Tipo</td>
+		<td>Opciones</td>
+	</tr>
 <% for(var i=0; i < quizes.length; i++){ %>
 	<tr>
-		<td>
+		<td colspan="3">
 			<a href="/quizes/<%= quizes[i].id %> "><%= quizes[i].pregunta %></a>
 		</td>
 		<td>
-			<a href="/quizes/<%= quizes[i].id %>/edit"><button>Editar</button></a>
+			<%= quizes[i].tema %>
 		</td>
-		<td>
+		<td colspan="2">
+			<a href="/quizes/<%= quizes[i].id %>/edit"><button>Editar</button></a>
+
 			<form method="post" action="/quizes/<%= quizes[i].id %>?_method=delete">
 				<button type="submit" onClick="return confirm('Borrar: <%= quizes[i].pregunta %>');">
 					Borrar
 				</button>
 			</form>
+
 		</td>
 	</tr>
 <% } %>
