--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -8,7 +8,9 @@
 	<tr>
 		<td colspan="3">Preguntas</td>
 		<td>Tipo</td>
+		<%if(session.user){%>
 		<td>Opciones</td>
+		<%}%>
 	</tr>
 <% for(var i=0; i < quizes.length; i++){ %>
 	<tr>
@@ -18,6 +20,7 @@
 		<td>
 			<%= quizes[i].tema %>
 		</td>
+		<%if(session.user){%>
 		<td colspan="2">
 			<a href="/quizes/<%= quizes[i].id %>/edit"><button>Editar</button></a>
 
@@ -28,7 +31,10 @@
 			</form>
 
 		</td>
+		<%}%>
 	</tr>
 <% } %>
 </table>
+<%if(session.user){%>
 <a href="/quizes/new"><button>Crear Pregunta</button></a>
+<%}%>
