Contador de vistas en Heroku

--- a/views/quizes/statistics.ejs
+++ b/views/quizes/statistics.ejs
@@ -1,5 +1,5 @@
 <h1>Estadisticas</h1>
-
+<br>
 <p>El número de preguntas es: 
 <%= estadisticas.numPreguntas %></p>
 <p>El número de comentarios totales es: 
@@ -10,4 +10,9 @@
 <%= estadisticas.noComentarios %></p>
 <p>El número de preguntas con comentarios: 
 <%= estadisticas.siComentarios %></p>
+<br>
+<h3>Visitas</h3>
+<br>
+<p>Visitantes únicos: <%= estadisticas.visitantes %></p>
 
+<p>Páginas vistas: <%= estadisticas.visitas %></p>
